# weather-aware-travel-itinerary-optimization

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODEX_EDIT_LOG.md  CONTRIBUTING.md  LICENSE  README.md  customer.html  pyproject.toml  requirement.txt  requirements.txt
.codex/: code-edit-log.md
assets/: city_details.js  city_details.json  dashboard.js  dashboard_metrics.json  data_loader.js  debug_summary.js  debug_summary.json  evaluation_metrics.js  evaluation_metrics.json  interest_preview.json  nature_explore.json  playback_data.json  route_index.json  selected_hotels.json  style.css
configs/: default_trip_config.yaml  nature_trip_config.yaml
data/: README.md
docs/: chi_oriented_literature_review.md  code_quality_workflow.md  core_paper_reading_cards.md  data_dictionary.md  limitation_driven_itinerary_repair_method.md  literature_deep_read_study_report.md  literature_onboarding_guide.md  literature_review_slides.fdb_latexmk  literature_review_slides.fls  literature_review_slides.tex  nature_aware_model_extension.md  novelty_claim_verification.md  pdflatex8088.fls  project_literature_evidence_matrix.md  recent_papers_2023_2026_addendum.md  related_work_outline.md  research_question_and_phase0_execution.md  research_stabilization_and_publication_appendix.md  research_stabilization_and_publication_plan.md
notebook/: adaptive_bandit_planner.py  blueprint_trip_map.py  gurobi_itinerary_solver.py  itinerary_baseline.py  itinerary_optimization_basic_pipeline.ipynb  itinerary_optimization_pipeline.ipynb  itinerary_optimization_pipeline_extend_gurobi.ipynb  (+5 more)
(+369 files in other folders)
